# svgandme

./: CMakeLists.txt
include/svgandme/: svg.h
